--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,7 +15,26 @@ spec:
         app: photos
     spec:
       containers:
-      - name: photos-application
-        image: 347476671573.dkr.ecr.us-east-1.amazonaws.com/uat-bki-fe-test:latest
-        ports:
-        - containerPort: 80
+        - name: photos-application
+          image: '347476671573.dkr.ecr.us-east-1.amazonaws.com/uat-bki-fe-test:latest'
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 80
+          resources:
+            requests:
+              memory: 64Mi
+              cpu: 250m
+            limits:
+              memory: 128Mi
+              cpu: 500m
+          readinessProbe:
+            tcpSocket:
+              port: 80
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          livenessProbe:
+            tcpSocket:
+              port: 80
+            initialDelaySeconds: 15
+            periodSeconds: 20
+
