--- a/.github/workflows/dockerhub-imagepush.yml
+++ b/.github/workflows/dockerhub-imagepush.yml
@@ -17,7 +17,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
           
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/hello-world
+        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/photosapp:v1
         
       - name: Docker Push
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/hello-world
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/hello-world:v1
