--- a/.github/workflows/dockerhub-imagepush.yml
+++ b/.github/workflows/dockerhub-imagepush.yml
@@ -20,4 +20,4 @@ jobs:
         run: docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/photosapp:v1
         
       - name: Docker Push
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/hello-world:v1
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/photosapp:v1
