--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
           
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/photosapp:v1
+        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/photosapp:${{github.run_id}}
         
       - name: Docker Push
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/photosapp:v1
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/photosapp:${{github.run_id}}
