--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
           git config user.email "actions@github.com"
           git config user.name "GitHub Actions"
-          git add deployment.yaml
+          git add dev/deployment.yaml
           git commit -m "Update image version in deployment manifest"
           git push
 
