--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Update image version in manifest
         run: |
           cd dev/
-          my_variable=$(grep '^photosapp' deployment.yaml)
+          my_variable=$(sed -n '/^photosapp/p' file.txt)
           sed -i "s/photosapp:v4530288290/photosapp:v${{github.run_id}}/g" deployment.yaml
   
       - name: Commit and push changes
