echo for previous tag

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,8 @@ jobs:
         run: |
           cd dev/
           my_variable=$(sed -n '/^photosapp.*/p' deployment.yaml)
-          sed -i "s/photosapp:v4530288290/photosapp:v${{github.run_id}}/g" deployment.yaml
+          echo ${my_variable}
+          sed -i "s/photosapp:v4530572711/photosapp:v${{github.run_id}}/g" deployment.yaml
   
       - name: Commit and push changes
         run: |
