--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,12 @@ jobs:
           ref: main
           token: ${{ secrets.PAT }}
 
+      - name: Show the previous workflow ID
+        run: |
+          PREVIOUS_RUN=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+        "https://api.github.com/repos/${{ github.repository }}/actions/runs?branch=${{ github.ref }}&event=push&status=success&per_page=2" | jq -r '.workflow_runs[1].id')
+        echo "Previous workflow ID: $PREVIOUS_RUN"
+
       - name: Update image version in manifest
         run: |
           cd dev/
