--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,17 +14,17 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - name: DockerHub Login
-        uses: docker/login-action@v2.1.0
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      # - name: DockerHub Login
+      #   uses: docker/login-action@v2.1.0
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_PASSWORD }}
           
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/photosapp:v${{github.run_id}}
+      # - name: Build the Docker image
+      #   run: docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/photosapp:v${{github.run_id}}
         
-      - name: Docker Push
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/photosapp:v${{github.run_id}}
+      # - name: Docker Push
+      #   run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/photosapp:v${{github.run_id}}
       
       - name: Checkout GitOps Repository
         uses: actions/checkout@v2
@@ -33,16 +33,10 @@ jobs:
           ref: main
           token: ${{ secrets.PAT }}
 
-      - name: Show the previous workflow ID
-        run: |
-          PREVIOUS_RUN=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-        "https://api.github.com/repos/${{ github.repository }}/actions/runs?branch=${{ github.ref }}&event=push&status=success&per_page=2" | jq -r '.workflow_runs[1].id')
-        echo "Previous workflow ID: $PREVIOUS_RUN"
-
       - name: Update image version in manifest
         run: |
           cd dev/
-          sed -i "s/photosapp:v4530703973/photosapp:v${{github.run_id}}/g" deployment.yaml
+          sed -i "s/photosapp:v.*/photosapp:v${{github.run_id}}/g" deployment.yaml
   
       - name: Commit and push changes
         run: |
