--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,17 +14,17 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      # - name: DockerHub Login
-      #   uses: docker/login-action@v2.1.0
-      #   with:
-      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #     password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: DockerHub Login
+        uses: docker/login-action@v2.1.0
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
           
-      # - name: Build the Docker image
-      #   run: docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/photosapp:v${{github.run_id}}
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/photosapp:v${{github.run_id}}
         
-      # - name: Docker Push
-      #   run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/photosapp:v${{github.run_id}}
+      - name: Docker Push
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/photosapp:v${{github.run_id}}
       
       - name: Checkout GitOps Repository
         uses: actions/checkout@v2
