--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,14 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
           
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/photosapp:v${{github.run_id}}
+        run: |
+          docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/photosapp:v${{github.run_id}}
+          docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/photosapp:latest
         
       - name: Docker Push
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/photosapp:v${{github.run_id}}
+        run: |
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/photosapp:v${{github.run_id}}
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/photosapp:latest
       
       - name: Checkout GitOps Repository
         uses: actions/checkout@v2
